SFeel/gen/sfeel_parser.go
// Code generated from SFeel.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // SFeel

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'not('", "')'", "','", "'..'", "'('", "']'", "'['", "'.'", "'date'",
	"'time'", "'date and time'", "'duration'", "'true'", "'false'", "", "'**'",
	"'*'", "'/'", "'+'", "'-'", "'<'", "'<='", "'>'", "'>='", "'='", "'!='",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "Name", "POW",
	"MUL", "DIV", "ADD", "SUB", "LESS", "LESSEQ", "GREATER", "GREATEREQ", "EQUAL",
	"NOTEQUAL", "INTEGER", "REAL", "STRING", "WS",
}

var ruleNames = []string{
	"inputEntry", "outputEntry", "syntaxCheck", "simple_unary_tests", "simple_positive_unary_tests",
	"simple_positive_unary_test", "unary_comparison", "interval", "open_interval_start",
	"closed_interval_start", "open_interval_end", "closed_interval_end", "simple_expressions",
	"expression", "simple_expression", "comparison", "arithmetic_expression",
	"endpoint", "simple_value", "qualified_name", "simple_literal", "date_time_literal",
	"numeric_literal", "integer_literal", "real_literal", "boolean_literal",
	"string_literal",
}

type SFeelParser struct {
	*antlr.BaseParser
}

// NewSFeelParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *SFeelParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewSFeelParser(input antlr.TokenStream) *SFeelParser {
	this := new(SFeelParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SFeel.g4"

	return this
}

// SFeelParser tokens.
const (
	SFeelParserEOF       = antlr.TokenEOF
	SFeelParserT__0      = 1
	SFeelParserT__1      = 2
	SFeelParserT__2      = 3
	SFeelParserT__3      = 4
	SFeelParserT__4      = 5
	SFeelParserT__5      = 6
	SFeelParserT__6      = 7
	SFeelParserT__7      = 8
	SFeelParserT__8      = 9
	SFeelParserT__9      = 10
	SFeelParserT__10     = 11
	SFeelParserT__11     = 12
	SFeelParserT__12     = 13
	SFeelParserT__13     = 14
	SFeelParserName      = 15
	SFeelParserPOW       = 16
	SFeelParserMUL       = 17
	SFeelParserDIV       = 18
	SFeelParserADD       = 19
	SFeelParserSUB       = 20
	SFeelParserLESS      = 21
	SFeelParserLESSEQ    = 22
	SFeelParserGREATER   = 23
	SFeelParserGREATEREQ = 24
	SFeelParserEQUAL     = 25
	SFeelParserNOTEQUAL  = 26
	SFeelParserINTEGER   = 27
	SFeelParserREAL      = 28
	SFeelParserSTRING    = 29
	SFeelParserWS        = 30
)

// SFeelParser rules.
const (
	SFeelParserRULE_inputEntry                  = 0
	SFeelParserRULE_outputEntry                 = 1
	SFeelParserRULE_syntaxCheck                 = 2
	SFeelParserRULE_simple_unary_tests          = 3
	SFeelParserRULE_simple_positive_unary_tests = 4
	SFeelParserRULE_simple_positive_unary_test  = 5
	SFeelParserRULE_unary_comparison            = 6
	SFeelParserRULE_interval                    = 7
	SFeelParserRULE_open_interval_start         = 8
	SFeelParserRULE_closed_interval_start       = 9
	SFeelParserRULE_open_interval_end           = 10
	SFeelParserRULE_closed_interval_end         = 11
	SFeelParserRULE_simple_expressions          = 12
	SFeelParserRULE_expression                  = 13
	SFeelParserRULE_simple_expression           = 14
	SFeelParserRULE_comparison                  = 15
	SFeelParserRULE_arithmetic_expression       = 16
	SFeelParserRULE_endpoint                    = 17
	SFeelParserRULE_simple_value                = 18
	SFeelParserRULE_qualified_name              = 19
	SFeelParserRULE_simple_literal              = 20
	SFeelParserRULE_date_time_literal           = 21
	SFeelParserRULE_numeric_literal             = 22
	SFeelParserRULE_integer_literal             = 23
	SFeelParserRULE_real_literal                = 24
	SFeelParserRULE_boolean_literal             = 25
	SFeelParserRULE_string_literal              = 26
)

// IInputEntryContext is an interface to support dynamic dispatch.
type IInputEntryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInputEntryContext differentiates from other interfaces.
	IsInputEntryContext()
}

type InputEntryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInputEntryContext() *InputEntryContext {
	var p = new(InputEntryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_inputEntry
	return p
}

func (*InputEntryContext) IsInputEntryContext() {}

func NewInputEntryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InputEntryContext {
	var p = new(InputEntryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_inputEntry

	return p
}

func (s *InputEntryContext) GetParser() antlr.Parser { return s.parser }

func (s *InputEntryContext) Simple_unary_tests() ISimple_unary_testsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_unary_testsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimple_unary_testsContext)
}

func (s *InputEntryContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *InputEntryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InputEntryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InputEntryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterInputEntry(s)
	}
}

func (s *InputEntryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitInputEntry(s)
	}
}

func (s *InputEntryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitInputEntry(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) InputEntry() (localctx IInputEntryContext) {
	localctx = NewInputEntryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SFeelParserRULE_inputEntry)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Simple_unary_tests()
	}
	{
		p.SetState(55)
		p.Match(SFeelParserEOF)
	}

	return localctx
}

// IOutputEntryContext is an interface to support dynamic dispatch.
type IOutputEntryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsOutputEntryContext differentiates from other interfaces.
	IsOutputEntryContext()
}

type OutputEntryContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyOutputEntryContext() *OutputEntryContext {
	var p = new(OutputEntryContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_outputEntry
	return p
}

func (*OutputEntryContext) IsOutputEntryContext() {}

func NewOutputEntryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *OutputEntryContext {
	var p = new(OutputEntryContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_outputEntry

	return p
}

func (s *OutputEntryContext) GetParser() antlr.Parser { return s.parser }

func (s *OutputEntryContext) Simple_expressions() ISimple_expressionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_expressionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimple_expressionsContext)
}

func (s *OutputEntryContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *OutputEntryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *OutputEntryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *OutputEntryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterOutputEntry(s)
	}
}

func (s *OutputEntryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitOutputEntry(s)
	}
}

func (s *OutputEntryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitOutputEntry(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) OutputEntry() (localctx IOutputEntryContext) {
	localctx = NewOutputEntryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SFeelParserRULE_outputEntry)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(57)
		p.Simple_expressions()
	}
	{
		p.SetState(58)
		p.Match(SFeelParserEOF)
	}

	return localctx
}

// ISyntaxCheckContext is an interface to support dynamic dispatch.
type ISyntaxCheckContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSyntaxCheckContext differentiates from other interfaces.
	IsSyntaxCheckContext()
}

type SyntaxCheckContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySyntaxCheckContext() *SyntaxCheckContext {
	var p = new(SyntaxCheckContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_syntaxCheck
	return p
}

func (*SyntaxCheckContext) IsSyntaxCheckContext() {}

func NewSyntaxCheckContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SyntaxCheckContext {
	var p = new(SyntaxCheckContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_syntaxCheck

	return p
}

func (s *SyntaxCheckContext) GetParser() antlr.Parser { return s.parser }

func (s *SyntaxCheckContext) Simple_unary_tests() ISimple_unary_testsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_unary_testsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimple_unary_testsContext)
}

func (s *SyntaxCheckContext) EOF() antlr.TerminalNode {
	return s.GetToken(SFeelParserEOF, 0)
}

func (s *SyntaxCheckContext) Simple_expressions() ISimple_expressionsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_expressionsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimple_expressionsContext)
}

func (s *SyntaxCheckContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxCheckContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SyntaxCheckContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterSyntaxCheck(s)
	}
}

func (s *SyntaxCheckContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitSyntaxCheck(s)
	}
}

func (s *SyntaxCheckContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitSyntaxCheck(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) SyntaxCheck() (localctx ISyntaxCheckContext) {
	localctx = NewSyntaxCheckContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SFeelParserRULE_syntaxCheck)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(60)
			p.Simple_unary_tests()
		}
		{
			p.SetState(61)
			p.Match(SFeelParserEOF)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(63)
			p.Simple_expressions()
		}
		{
			p.SetState(64)
			p.Match(SFeelParserEOF)
		}

	}

	return localctx
}

// ISimple_unary_testsContext is an interface to support dynamic dispatch.
type ISimple_unary_testsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSimple_unary_testsContext differentiates from other interfaces.
	IsSimple_unary_testsContext()
}

type Simple_unary_testsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimple_unary_testsContext() *Simple_unary_testsContext {
	var p = new(Simple_unary_testsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_simple_unary_tests
	return p
}

func (*Simple_unary_testsContext) IsSimple_unary_testsContext() {}

func NewSimple_unary_testsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Simple_unary_testsContext {
	var p = new(Simple_unary_testsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_simple_unary_tests

	return p
}

func (s *Simple_unary_testsContext) GetParser() antlr.Parser { return s.parser }

func (s *Simple_unary_testsContext) CopyFrom(ctx *Simple_unary_testsContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Simple_unary_testsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Simple_unary_testsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type EmptySimpleUnaryTestsContext struct {
	*Simple_unary_testsContext
}

func NewEmptySimpleUnaryTestsContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EmptySimpleUnaryTestsContext {
	var p = new(EmptySimpleUnaryTestsContext)

	p.Simple_unary_testsContext = NewEmptySimple_unary_testsContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Simple_unary_testsContext))

	return p
}

func (s *EmptySimpleUnaryTestsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EmptySimpleUnaryTestsContext) SUB() antlr.TerminalNode {
	return s.GetToken(SFeelParserSUB, 0)
}

func (s *EmptySimpleUnaryTestsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterEmptySimpleUnaryTests(s)
	}
}

func (s *EmptySimpleUnaryTestsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitEmptySimpleUnaryTests(s)
	}
}

func (s *EmptySimpleUnaryTestsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitEmptySimpleUnaryTests(s)

	default:
		return t.VisitChildren(s)
	}
}

type SimpleUnaryTestsContext struct {
	*Simple_unary_testsContext
}

func NewSimpleUnaryTestsContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SimpleUnaryTestsContext {
	var p = new(SimpleUnaryTestsContext)

	p.Simple_unary_testsContext = NewEmptySimple_unary_testsContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Simple_unary_testsContext))

	return p
}

func (s *SimpleUnaryTestsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SimpleUnaryTestsContext) Simple_positive_unary_tests() ISimple_positive_unary_testsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_positive_unary_testsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimple_positive_unary_testsContext)
}

func (s *SimpleUnaryTestsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterSimpleUnaryTests(s)
	}
}

func (s *SimpleUnaryTestsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitSimpleUnaryTests(s)
	}
}

func (s *SimpleUnaryTestsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitSimpleUnaryTests(s)

	default:
		return t.VisitChildren(s)
	}
}

type NegationSimpleUnaryTestsContext struct {
	*Simple_unary_testsContext
}

func NewNegationSimpleUnaryTestsContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *NegationSimpleUnaryTestsContext {
	var p = new(NegationSimpleUnaryTestsContext)

	p.Simple_unary_testsContext = NewEmptySimple_unary_testsContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Simple_unary_testsContext))

	return p
}

func (s *NegationSimpleUnaryTestsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NegationSimpleUnaryTestsContext) Simple_positive_unary_tests() ISimple_positive_unary_testsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_positive_unary_testsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISimple_positive_unary_testsContext)
}

func (s *NegationSimpleUnaryTestsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterNegationSimpleUnaryTests(s)
	}
}

func (s *NegationSimpleUnaryTestsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitNegationSimpleUnaryTests(s)
	}
}

func (s *NegationSimpleUnaryTestsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitNegationSimpleUnaryTests(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) Simple_unary_tests() (localctx ISimple_unary_testsContext) {
	localctx = NewSimple_unary_testsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SFeelParserRULE_simple_unary_tests)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		localctx = NewSimpleUnaryTestsContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(68)
			p.Simple_positive_unary_tests()
		}

	case 2:
		localctx = NewNegationSimpleUnaryTestsContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(69)
			p.Match(SFeelParserT__0)
		}
		{
			p.SetState(70)
			p.Simple_positive_unary_tests()
		}
		{
			p.SetState(71)
			p.Match(SFeelParserT__1)
		}

	case 3:
		localctx = NewEmptySimpleUnaryTestsContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(73)
			p.Match(SFeelParserSUB)
		}

	}

	return localctx
}

// ISimple_positive_unary_testsContext is an interface to support dynamic dispatch.
type ISimple_positive_unary_testsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSimple_positive_unary_testsContext differentiates from other interfaces.
	IsSimple_positive_unary_testsContext()
}

type Simple_positive_unary_testsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimple_positive_unary_testsContext() *Simple_positive_unary_testsContext {
	var p = new(Simple_positive_unary_testsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_simple_positive_unary_tests
	return p
}

func (*Simple_positive_unary_testsContext) IsSimple_positive_unary_testsContext() {}

func NewSimple_positive_unary_testsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Simple_positive_unary_testsContext {
	var p = new(Simple_positive_unary_testsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_simple_positive_unary_tests

	return p
}

func (s *Simple_positive_unary_testsContext) GetParser() antlr.Parser { return s.parser }

func (s *Simple_positive_unary_testsContext) AllSimple_positive_unary_test() []ISimple_positive_unary_testContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISimple_positive_unary_testContext)(nil)).Elem())
	var tst = make([]ISimple_positive_unary_testContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISimple_positive_unary_testContext)
		}
	}

	return tst
}

func (s *Simple_positive_unary_testsContext) Simple_positive_unary_test(i int) ISimple_positive_unary_testContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISimple_positive_unary_testContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISimple_positive_unary_testContext)
}

func (s *Simple_positive_unary_testsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Simple_positive_unary_testsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Simple_positive_unary_testsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.EnterSimple_positive_unary_tests(s)
	}
}

func (s *Simple_positive_unary_testsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SFeelListener); ok {
		listenerT.ExitSimple_positive_unary_tests(s)
	}
}

func (s *Simple_positive_unary_testsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case SFeelVisitor:
		return t.VisitSimple_positive_unary_tests(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *SFeelParser) Simple_positive_unary_tests() (localctx ISimple_positive_unary_testsContext) {
	localctx = NewSimple_positive_unary_testsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SFeelParserRULE_simple_positive_unary_tests)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(76)
		p.Simple_positive_unary_test()
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == SFeelParserT__2 {
		{
			p.SetState(77)
			p.Match(SFeelParserT__2)
		}
		{
			p.SetState(78)
			p.Simple_positive_unary_test()
		}

		p.SetState(83)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ISimple_positive_unary_testContext is an interface to support dynamic dispatch.
type ISimple_positive_unary_testContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSimple_positive_unary_testContext differentiates from other interfaces.
	IsSimple_positive_unary_testContext()
}

type Simple_positive_unary_testContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySimple_positive_unary_testContext() *Simple_positive_unary_testContext {
	var p = new(Simple_positive_unary_testContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SFeelParserRULE_simple_positive_unary_test
	return p
}

func (*Simple_positive_unary_testContext) IsSimple_positive_unary_testContext() {}

func NewSimple_positive_unary_testContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Simple_positive_unary_testContext {
	var p = new(Simple_positive_unary_testContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SFeelParserRULE_simple_positive_unary_test

	return p
}

func (s *Simple_positive_unary_testContext) GetParser() antlr.Parser { return s.parser }

func (s *Simple_positive_unary_testContext) Unary_comparison() IUnary_comparisonContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnary_comparisonContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnary_comparisonContext)
}

func (s *Simple_positive_unary_testContext) Interval() IIntervalContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIntervalContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}
